--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -12,7 +12,7 @@
     />
     <title>Karol Wiśniewski - portfolio</title>
   </head>
-  <body>
+  <body class="bg-veryDarkGray mx-auto max-w-4xl px-2 sm:px-6 lg:px-8">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
